<resources>
    <string name="app_name">Temperature Cricket</string>
    <string name="text_view">Did you know,we can determine the  temperature outside
    by counting the number of chirps the cricket makes.Chose the temperature scale.</string>
    <string name="temp1">Temperature(Fahrenheit)</string>
    <string name="temperature_fahrenheit">Temperature(Celsius)</string>
    <string name="textview">TextView</string>
    <string name="to_compute_the_temperature_in_fahrenheit_enter_the_number_of_chirps_in_14_seconds">To compute the temperature in Fahrenheit , enter the number of chirps in 14 seconds.</string>
    <string name="temp2">Temp</string>
    <string name="to_compute_the_temperature_in_celsius_enter_number_of_chirps_per_25_seonds">To compute the temperature in Celsius , enter number of chirps per 25 seonds</string>
    <string name="count">count</string>
    <string name="temp3">Temp</string>
    <string name="tvResult2">TextView</string>
    <string name="count2">count</string>
    <string name="tvResult3">TextView</string>
    <string name="temp">temp</string>
</resources>
