<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLightPrimary"
    tools:context=".Activity2">

    <TextView
        android:id="@+id/tvactivity2"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/to_compute_the_temperature_in_fahrenheit_enter_the_number_of_chirps_in_14_seconds"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/edF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/count2"
        android:inputType="number" />

    <Button
        android:id="@+id/btnF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/temp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvResult2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/tvResult2"
        android:textStyle="bold|italic" />
</LinearLayout>