<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLightPrimary"
    tools:context=".MainActvity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/text_view"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btnTempF"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/temp1"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btnTempC"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/temperature_fahrenheit"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btnWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="More Info"
        android:textStyle="bold|italic" />

</LinearLayout>